--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
             <div class="welcome-text">Login</div><br>
                 
                 <div class="input-wrapper username">
-                    <input type="email" placeholder="Email" name="email" class="input-background" required>
+                    <input type="email" placeholder="Email or Username" name="email" class="input-background" required>
                 </div>
                 <div class="input-wrapper password">
                     <input type="password" placeholder="Password" name="password" class="input-background" required>
