--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -3,7 +3,7 @@
 {% block title %}Coding Nexus{% endblock %}
 
 {% block content %}
-<link rel="stylesheet" href="{% static 'css/editprofile.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'css/editprofile.css' %}" />
 <div class="container">
     <div class="content">
         <div class="user-sidebar">
