--- a/templates/join_classroom.html
+++ b/templates/join_classroom.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
+{% load static %}
 {% block content %}
+<link rel="stylesheet" href="{% static 'css/educator.css' %}" />
 <h2>Join Classroom</h2>
 <form method="post">
     {% csrf_token %}
