--- a/templates/home.html
+++ b/templates/home.html
@@ -26,7 +26,7 @@
         </div>
     </div>
     <div class="view-courses-btn">
-        <div class="btn-text"> <a  href="courses.html" >COURSES </a></div>
+        <div class="btn-text"> <a  href="{% url 'course' %}" >COURSES </a></div>
     </div>
 </div>
 </div>
